finish  dtrace in pa2.3

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -1,49 +1,20 @@
 TOPNAME = ysyx_24070016_top
-# NXDC_FILES = constr/ysyx_24070016_top.nxdc
-
-VERILATOR = verilator
-VERILATOR_CFLAGS += -MMD --build -cc --trace -Wall
+GUEST_ISA = riscv32
 
 BUILD_DIR = ./build
-OBJ_DIR = $(BUILD_DIR)/obj_dir
-BIN = $(BUILD_DIR)/$(TOPNAME)
-
 $(shell mkdir -p $(BUILD_DIR))
+OBJ_DIR = $(BUILD_DIR)/obj_dir
+CSRC_DIR = $(abspath ./csrc)
+VSRC_DIR = $(abspath ./vsrc)
 
-#项目源文件
-VSRCS = $(shell find $(abspath ./vsrc) -name "*.v")
-CSRCS = $(shell find $(abspath ./csrc) -name "*.c" -or -name "*.cc" -or -name "*.cpp")
+NEMUISO = $(NEMU_HOME)/build/riscv32-nemu-interpreter-so
+VERILOGTOP = $(VSRC_DIR)/$(TOPNAME).v
+VFLAGS = --trace --cc --exe -O3 --threads-dpi all -I$(VSRC_DIR) -Mdir $(OBJ_DIR)
+VBIN =  $(OBJ_DIR)/$(addprefix V, $(TOPNAME))
+VSRC = $(shell find $(VSRC_DIR) -name "*.v")
+CSRC = $(shell find $(CSRC_DIR) -name "*.cc" -or -name "*.cpp")
+CINC_PATH = -I$(CSRC_DIR) -I$(CSRC_DIR)/include
+BUILDMK = $(abspath ./scripts/build.mk)
 
-#nvboard
-# include $(NVBOARD_HOME)/scripts/nvboard.mk
-# INCFLAGS = $(addprefix -I, $(INC_PATH))
-# CFLAGS += $(INCFLAGS) -DTOP_NAME="\"V$(TOPNAME)\""
-# LDFLAGS += -lSDL2 -lSDL2_image
-# CSRCS += $(SRC_AUTO_BIND)
-##约束文件
-# SRC_AUTO_BIND = $(abspath $(BUILD_DIR)/auto_bind.cpp)
-# $(SRC_AUTO_BIND): $(NXDC_FILES)
-# 	python3 $(NVBOARD_HOME)/scripts/auto_pin_bind.py $^ $@
-
-all: sim
-	@echo "Write this Makefile by your self."
-
-# sim_nvbd: $(CSRCS) $(VSRCS) $(NVBOARD_ARCHIVE)
-# 	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
-# 	verilator $(VERILATOR_CFLAGS) \
-# 		-top $(TOPNAME) \
-# 		$^ \
-# 		$(addprefix -CFLAGS , $(CFLAGS)) \
-# 		$(addprefix -LDFLAGS , $(LDFLAGS)) \
-# 		-Mdir $(OBJ_DIR) --exe -o $(abspath $(BIN))
-
-sim: $(CSRCS) $(VSRCS)
-	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
-	verilator $(VERILATOR_CFLAGS) \
-		-top $(TOPNAME) \
-		$^ \
-		-Mdir $(OBJ_DIR) --exe -o $(abspath $(BIN))
-
-.PHONY: all sim
-
+include ./scripts/npc.mk
 include ../Makefile
