--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -169,6 +169,16 @@ config MTRACE
   bool "Enable memory tracer"
   default n
 
+config FTRACE
+  depends on TRACE
+  bool "Enable function tracer"
+  default n
+
+config DTRACE
+  depends on TRACE
+  bool "Enable device tracer"
+  default n
+
 choice
   prompt "Reference design"
   default DIFFTEST_REF_SPIKE if ISA_riscv
